    end authors should be careful with xine-lib older than 1.1.10.
  * Backported xine-config & libxine.pc from 1.2.
    Consequently, xine-config now requires pkg-config.
  * Don't discard audio samples forever. Fixed streaming playback.
  * Fix a possible crash on channel change in the DVB plugin.
  * Flash video demuxer improvements and bug fixes.

xine-lib (1.1.9.1) 2008-01-11
  * Security fixes:
    - Buffer overflow which allows a remote attacker to execute arbitrary
      code via a crafted SDP Abstract attribute.
      (CVE-2008-0225, a.k.a. CVE-2008-0238)
      (Fix ported from mplayer changeset 22821)
  * Fix a read-past-end bug in xine-lib's internal strtok_r replacement.
    (Only affects systems without strtok_r.) [Bug #19]
  * Fix a bug which causes video playback display errors on PPC/Darwin.

xine-lib (1.1.9) 2008-01-06
  * Fix dvd://.../title[.chapter] handling (somewhat broken in 1.1.8).
  * Fix switching DVB subtitles channels.
  * DVB sub: switch to dyn mem alloc and allow multiple CLUTs per page.
  * Check if DVB sub PTS is reliable and show sub immediately if it's not.
  * Fix incorrect H.264 detection on successive MPEG1/2 B frames.
  * Add UI option to configure FFmpeg's video decoder thread count.
  * Improve syncing of audio and video in the presence of bad frames.
  * Improve handling of invalid or unknown frame sizes.
  * Fixed handling of streamed Flash videos (broken in 1.1.5).
  * Fixed division by zero in sputext decoder
  * Build fix for when using Linux 2.6.23 headers. [Bug SF 1820958]
  * Implemented decoding of XML character entities with codes >= 256.
    This requires conversion to UTF-8 of entities with codes >= 128.
  * Handle initial Unicde BOMs in XML; convert other UTF encodings to UTF-8.
  * Fixed ATSC support. [Bug SF 1749508]
  * Fixed a possible DVB plugin crash when switching channels.
  * Fixed a crash closing the frontend. [Bug #7]
  * Fixed deadlock on ao_close while paused.